# AITrainer

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
aitrainer/: __init__.py  ddp.py  deepspeed_trainer.py  hparams.py  protocols.py  pytorch_trainer.py  utils.py
examples/: data.py  hparams.json  hparams.py  models.py  train_model.py
