[tool.poetry]
name = "aitrainer"
version = "0.1.0"
description = "Hub with various AI trainers"
authors = ["KubiakJakub01 <kubiak.jakub01@gmail.com>"]
readme = "README.md"

[tool.poetry-exec-plugin.commands]
ruff = "ruff check aitrainer"
mypy = "mypy --ignore-missing-imports aitrainer"
pylint = "pylint --rcfile pyproject.toml aitrainer"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.3.5"
mypy = "^1.9.0"
pylint = "^3.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
